# refractiveindex.info-database

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml  validate-data-yaml.yml
database/: catalog-3D.yml  catalog-PopularGlass.yml  catalog-n2.yml  catalog-nk.yml  library-bac.yml  library-n2.yml  library-nk.yml  library.yml  permission.txt
database/doc/: Dispersion formulas.docx  changelog-n2.txt  changelog-nk.txt  changelog.txt  credits.txt
database/glass/ami/: AMTIR-1.yml  AMTIR-2.yml  AMTIR-3.yml  AMTIR-6.yml
database/glass/barberini/: D0082.yml  D0191.yml  D0290.yml  D0391.yml  D0587.yml  D0687.yml  D0785.yml  D0888.yml  D0891.yml  D0991.yml  D1125.yml  D1214.yml  D1219.yml  D1230.yml  D1420_1.yml  D1426-D1526.yml  D1511.yml  D1520.yml  D1616.yml  D4150.yml  D5336_1.yml  D6117.yml  D6420.yml  D6526-D6626.yml  D6625.yml  D6726-D6826.yml  D9148.yml
database/glass/cdgm/: BAF3.yml  BAF4.yml  BAF5.yml  BAF6.yml  BAF7.yml  BAF8.yml  D-K9L.yml  D-LAF79.yml  D-LAK70.yml  D-ZK2L.yml  F1.yml  F13.yml  F2.yml  F3.yml  F4.yml  F5.yml  F6.yml  F7.yml  H-BAK1.yml  H-BAK2.yml  H-BAK3.yml  H-BAK4.yml  H-BAK5.yml  H-BAK6.yml  H-BAK7.yml  H-BAK8.yml  H-F1.yml  H-F13.yml  H-F4.yml  H-F51.yml  H-FK61.yml  H-K10.yml  H-K11.yml  H-K5.yml  H-K50.yml  H-K51.yml  H-K6.yml  H-K7.yml  (+102 more)
database/info/: crystals.html  glass.html  liquids.html  metals.html  noinfo.html  plastics.html
database/tools/: n2explorer.py  nkexplorer.py
schemas/: data.schema.json
scripts/: validate.py  validate_yaml.py
tests/: test_parse.py  test_yaml.py
(+12527 files in other folders)
