[project]
name = "refractiveindex-info-database"
version = "2025.02.23"
description = "Database of optical constants"
requires-python = ">=3.10"
dependencies = [
    "cerberus>=1.3.7",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "pyyaml>=6.0.2",
]

[tool.pytest.ini_options]
addopts = "-n auto"
